# fluxdefense

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO_RUNNING.md  FEATURE_SUMMARY.md  LINUX_SUPPORT.md  LINUX_TASKS.md  LINUX_TRAY_README.md  Makefile  PHASE1_COMPLETE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  SYSTEM_METRICS_README.md  TASKS.md  demo_phase1_complete.sh  system_scan.sh  system_tray_demo.sh  test-event-log.json  test_fluxdefense_fix.sh  test_phase1_demo.sh  test_phase2_integration.sh  test_run2.sh  test_system_tray.swift  test_websocket_logs.html
FluxDefenseUI/: Info.plist  Package.swift  SystemMonitor.swift  build_signed.sh
FluxDefenseUI/.build/: build.db  debug.yaml  plugin-tools.yaml  workspace-state.json
scripts/: flux_tray_linux.py  flux_tray_linux_gtk.py  linux_tray_demo.sh  scan_ubuntu_detailed.sh  scan_ubuntu_system.sh  setup_linux_tray.sh  show_memory_display_demo.sh  show_system_tray_demo.sh  show_task_manager_demo.sh  test_enhanced_security.sh  test_linux.sh  test_network_filter.sh  test_phase1_integration.sh  test_run.sh  test_ui.sh
src/: ffi.rs  lib.rs  main.rs  monitor.rs  scanner.rs  system_metrics.rs
src/api/: handlers.rs  mod.rs  models.rs  policy_handlers.rs  websocket.rs  (+1 more)
sys-ext/: Info.plist  Makefile  Package.swift  README.md  entitlements.plist
ubuntu-whitelist-data/: 000023d7-98e2-437c-b7e6-39184ab112b3.json  0000f508-a545-4aa0-8389-0cffe00d69b4.json  0001dda1-cf44-4c97-acc8-359c0e0981a9.json  00025469-5021-4945-9135-615e08254a35.json  00028171-dd5c-49d7-a599-13f79a95d313.json  000343e3-aac1-4f12-8def-3314994f04b9.json  00048e9f-9eb7-484c-87ab-60369069047f.json  00077728-372e-411b-8703-2e76a8273f40.json  00077cd5-bf77-49e4-bf57-19288f4793c6.json  0007f64e-9e21-4763-958d-71fe0b087309.json  0007f919-3e6d-4ba6-bd67-d290aac0fde9.json  00091019-1aef-4c89-a204-56cb57fd244b.json  000c35cf-bd4b-4d68-917e-a6290a8e4096.json  000c4866-25ff-4091-8b09-c0bfe7f354e2.json  000c6428-ffb7-4344-a645-48d0d37a0220.json  000cf11a-359a-4916-b397-9908e7332954.json  000d2581-75b6-4446-849c-46d1dd37ce13.json  000d3d67-413d-4a34-8a79-7f37904d6d44.json  000ee503-1b93-45aa-be96-d383ad4728d3.json  000f1c96-c59b-4e8f-9bc7-0d7adf7bcacf.json  000fb1dd-33b9-43d5-a5e5-590737d68e3c.json  00113f5a-75e9-4abb-b3c0-297227a86e05.json  00126a61-919e-4da5-85d2-0cc6616cd19f.json  0012f443-a1fc-4744-827f-afc533ba3c9b.json  00177b20-584b-4c98-9dc3-1ad65a8f8f6e.json  00180438-4cde-40f8-b39b-7b42128ddd20.json  001a6be6-13e8-4d8f-b87c-a17360a738fa.json  001ac1ff-5126-4989-a4ba-d194315ef537.json  001c92c4-3649-436a-a1b0-cd79ff536c50.json  001ca024-0a26-4cc5-aa36-967eff04bf2f.json  001daf64-4a8c-4976-9633-c1f98a69dccd.json  001e0abc-94ab-49ae-8049-116610d5ceed.json  00204fcb-a439-41a0-9d9a-b1a079d22e70.json  0020d4e0-7e65-45ce-898e-fde7fa8adb16.json  0020f9eb-76fc-437f-bfe0-84b465189df5.json  00211fc3-1c16-4f15-b62a-41bdb5bd9190.json  002273f9-56c7-4def-99f9-1e1ea6f344f8.json  00232324-1919-494b-867a-4fcd3583d3a6.json  0023d0c2-4047-4c0e-90a5-58d4fa020716.json  0023db32-f7a0-46bf-9567-b4148cc08d3e.json  (+55709 more)
web-dashboard/: package-lock.json  package.json  tsconfig.app.json
(+1124 files in other folders)
