[package]
name = "fluxdefense"
version = "0.1.0"
edition = "2021"
description = "Cross-platform EDR and endpoint defense system for macOS and Linux"
license = "MIT"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

[features]
default = ["passive-mode"]
esf = []
passive-mode = []

[build-dependencies]
bindgen = "0.69"

[lib]
name = "fluxdefense"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fluxdefense"
path = "src/main.rs"

[[bin]]
name = "file-scanner"
path = "src/bin/file_scanner.rs"

[[bin]]
name = "flux-monitor"
path = "src/bin/flux_monitor.rs"